; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/x509/extr_x_name.c_X509_NAME_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/x509/extr_x_name.c_X509_NAME_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @X509_NAME_set(i32** %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  store i32** %0, i32*** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32**, i32*** %4, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %7, %8
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load i32**, i32*** %4, align 8
  %12 = load i32*, i32** %11, align 8
  %13 = icmp ne i32* %12, null
  %14 = zext i1 %13 to i32
  store i32 %14, i32* %3, align 4
  br label %26

15:                                               ; preds = %2
  %16 = load i32*, i32** %5, align 8
  %17 = call i32* @X509_NAME_dup(i32* %16)
  store i32* %17, i32** %5, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %26

20:                                               ; preds = %15
  %21 = load i32**, i32*** %4, align 8
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @X509_NAME_free(i32* %22)
  %24 = load i32*, i32** %5, align 8
  %25 = load i32**, i32*** %4, align 8
  store i32* %24, i32** %25, align 8
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %20, %19, %10
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32* @X509_NAME_dup(i32*) #1

declare dso_local i32 @X509_NAME_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
